@@ -91,6 +91,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #26499: Account for remaining Content-Length in
+  HTTPResponse.readline() and read1().  Based on patch by Silent Ghost.
+  Also document that HTTPResponse now supports these methods.
+
 - Issue #25320: Handle sockets in directories unittest discovery is scanning.
   Patch from Victor van den Elzen.
 
